# marvis-risk-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_DESIGN_AUDIT_2026-06-13.md  CODE_REVIEW_2026-06-13-round2.md  CODE_REVIEW_2026-06-13-round3.md  CODE_REVIEW_2026-06-13.md  CONTEXT.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  windows-installer.yml
docs/: branding.md  notebook_contract.md  roadmap.md  runbook.md  sample_weight_guide.md  versioning.md  对notebook的要求.md
docs/ks_baseline/: README.md  baselines.json
docs/plans/: modeling-agent-roadmap.md  settings-ia-refactor.md  v2-completion-plan.md  v2-comprehensive-improvement-plan.md  v2-feature-phase-spec.md  v2-frontend-layout-spec.md  v2-join-phase-spec.md  v2-longtail-adjudications.md  v2-master-backlog.md  v2-modeling-phase-spec.md  v2-plan-driver-spec.md  v2-real-materials-reconciliation-checklist.md  v2-strategy-risk-analysis-plan.md  v2-trust-first-plan.md
docs/releases/: 2026-07-02-intermediate-pr.md  2026-07-03-v2-mainline-pr.md
docs/reviews/: 2026-06-21-v2-full-code-review.md  2026-06-28-v2-improvement-proposals.md  2026-06-28-v2-plan-code-review.md  2026-06-28-v2-runtime-deep-review.md  2026-07-02-v2-comprehensive-improvement-review.md  2026-07-03-fin1-landing-verification.md  2026-07-03-fin2-fin3-closing-review.md  2026-07-03-vd11-design-token-inventory.md  2026-07-04-full-read-and-owner-qa.md
marvis/: __main__.py  api.py  api_data_payloads.py  api_report_field_helpers.py  api_report_helpers.py  api_scan_helpers.py  api_schemas.py  api_settings.py  api_stage_helpers.py  api_task_helpers.py  api_task_payloads.py  app.py  backup.py  branding.py  db.py  db_schema.py  domain.py  error_kinds.py  errors.py  execution_environment.py  files.py  formatting.py  job_cancellation.py  job_heartbeat.py  job_watchdog.py  kernel_probe.py  llm_client.py  llm_prompts.py  llm_settings.py  logging_setup.py  memory_policy.py  metric_tables.py  model_algorithms.py  modeling_policy_signals.py  notebook_cancellation.py  notebook_contract.py  notebook_io.py  notebook_steps.py  notebook_worker.py  notebooks.py  (+17 more)
marvis/agent/: adhoc_analysis.py  adjust_specs.py  auto_drive.py  data_dictionary.py  driver_turn.py  feature_setup.py  gate_adapters.py  gate_execution_adapter.py  gate_param_schema.py  gate_payloads.py  gate_response_adapter.py  instruction_router.py  join_setup.py  json_reply.py  memory_bridge.py  modeling_red_flags.py  modeling_setup.py  orchestrator.py  plan_driver.py  plan_message_composer.py  plan_utils.py  (+15 more)
riskmodel_checker/: __main__.py  api.py  api_schemas.py  api_settings.py  api_task_payloads.py  app.py  branding.py  compat.py  db.py  domain.py  execution_environment.py  files.py  llm_client.py  llm_settings.py  metric_tables.py  model_algorithms.py  notebook_cancellation.py  notebook_contract.py  notebook_steps.py  notebooks.py  pipeline.py  recovery.py  report_fields.py  report_texts.py  safe_paths.py  settings.py  state_machine.py  template_reports.py
scripts/: check  generate_marvis_glow_animation.py  ks_baseline.py  release_push.py  select_affected_tests.py
tests/: conftest.py  test_adhoc_analysis.py  test_adhoc_turn.py  test_agent_api.py  test_agent_autodrive.py  test_agent_gate_contracts.py  test_agent_intent.py  test_agent_memory_api.py  test_agent_memory_extractors.py  test_agent_memory_retrieval.py  test_agent_memory_store.py  test_agent_pmml_scoring_evidence.py  test_agent_service.py  test_agent_task_routing.py  test_align.py  test_analysis_pack.py  test_analysis_trend.py  test_api_scan_helpers.py  test_api_structure.py  test_api_v2.py  test_app_security.py  test_artifact_api.py  test_artifacts_recovery.py  test_artifacts_transactional.py  test_audit_api.py  test_branding.py  test_check_affected.py  test_cli.py  test_cli_backup.py  test_cli_validate.py  test_concurrency.py  test_data_api.py  test_data_backend.py  test_data_contracts.py  test_data_dedup.py  test_data_direction.py  test_data_join_api.py  test_data_ops_pack.py  test_data_ops_slice_aggregate.py  test_data_repository_registry.py  (+185 more)
(+442 files in other folders)
