[project]
name = "marvis"
version = "1.1.6"
description = "MARVIS-Agent: all-purpose credit-risk agent for model development, validation, data processing, feature analysis, and strategy workflows"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
  "nbformat>=5.10,<6",
  "nbclient>=0.10,<0.12",
  "ipykernel>=6.29,<8",
  "ipython>=8.20,<10",
  "jupyter-client>=8.6,<9",
  "psutil>=5.9,<8",
  "openpyxl>=3.1,<4",
  "xlrd>=2.0,<3",
  "duckdb>=0.9,<2",
  "rapidfuzz>=3,<4",
  "pyarrow>=15,<25",
  "python-docx>=1.1,<2",
  "pydantic>=2.7,<3",
  "pandas>=2.2,<4",
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "scikit-learn>=1.4,<2",
  "statsmodels>=0.14,<1",
  "joblib>=1.3,<2",
  "sklearn2pmml>=0.131,<1",
  "pypmml>=1.5,<2",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "xgboost>=2.0,<4",
  "lightgbm>=4.0,<5",
  "catboost>=1.2,<2",
  "jsonschema>=4.0,<5",
]

[project.scripts]
marvis = "marvis.__main__:main"
marvis-risk-agent = "marvis.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "httpx>=0.27,<1",
  "httpx2>=2.4,<3",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
  "slow: real training/real subprocess/JVM-warm-up tests that take more than ~5s",
  "e2e: tests that start a real service (FastAPI app, browser, etc.)",
  "llm: LLM evaluation/eval-set tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marvis*"]

[tool.setuptools.package-data]
marvis = ["static/*", "static/js/*", "static/js/v2/*", "static/css/*", "static/brand/*", "static/pets/*", "static/pets/naitang/*", "static/pets/xiaojiu/*", "static/pets/auditbot/*", "static/pets/auditbot-pro/*", "static/pets/auditbot-poly/*", "static/pets/auditbot-ink/*", "static/pets/auditbot-clay/*", "static/pets/auditbot-comic/*", "static/pets/auditbot-pixel/*", "packs/*/manifest.json"]
